# qt-getting-started

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
